react should work now

--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/nate-levine/www.nate-levine.com/issues"
   },
-  "homepage": "https://github.com/nate-levine/www.nate-levine.com/react/index.html"
+  "homepage": "https://github.com/nate-levine/www.nate-levine.com#readme"
 }
