--- a/react/package.json
+++ b/react/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "babel-preset-nano-react-app": "^0.1.0",
